[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/Attacks/ghost/DisperseCloud.png" type="Texture" id=1]
[ext_resource path="res://objects/Item Objects/DisperseCloud.gd" type="Script" id=2]
[ext_resource path="res://sound/sfx/pop.ogg" type="AudioStream" id=3]
[ext_resource path="res://sound/sfx/Ghost aaa terraria.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Disperse"
tracks/0/type = "value"
tracks/0/path = NodePath("Cloud1/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -64, -64 ), Vector2( -90, -90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cloud3/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -64, -64 ), Vector2( -90, -90 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cloud2/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -64, -64 ), Vector2( -90, -90 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cloud4/Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -64, -64 ), Vector2( -90, -90 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cloud1/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -128, -128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cloud3/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -128, -128 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cloud2/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -128, -128 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cloud4/Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -128, -128 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="DisperseCloud" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Cloud1" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Cloud1"]
position = Vector2( -128, -128 )
texture = ExtResource( 1 )

[node name="Cloud3" type="Position2D" parent="."]
scale = Vector2( 1, -1 )

[node name="Sprite" type="Sprite" parent="Cloud3"]
position = Vector2( -128, -128 )
texture = ExtResource( 1 )

[node name="Cloud2" type="Position2D" parent="."]
scale = Vector2( -1, 1 )

[node name="Sprite" type="Sprite" parent="Cloud2"]
position = Vector2( -128, -128 )
texture = ExtResource( 1 )

[node name="Cloud4" type="Position2D" parent="."]
scale = Vector2( -1, -1 )

[node name="Sprite" type="Sprite" parent="Cloud4"]
position = Vector2( -128, -128 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Disperse = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="GhostPoof" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -0.555
bus = "SoundEffects"

[node name="BalloonPop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SoundEffects"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
